--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,13 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+# All the following settings are optional:
+where = ["."]  # ["."] by default
 
 [project]
 name = "pyvjoyffb"
-version = "1.0"
+version = "0.2"
 authors = [
   { name="Yannick Richter" },
 ]
@@ -20,3 +23,12 @@ classifiers = [
 
 [project.urls]
 Homepage = "https://github.com/Ultrawipf/pyvjoy"
+
+[tool.setuptools]
+# ...
+# By default, include-package-data is true in pyproject.toml,
+# so you do NOT have to specify this line.
+include-package-data = true
+
+[tool.setuptools.package-data]
+pyvjoy = ["lib/*/*.dll"]
